# Security-Starter-Kits

./: IOS_APP.url  README.md  data.sql  schema.sql
Firmware_Images/: Readme  aws_ota_demos_v03.sfb
Mobile_APP/IOS/SSKAPP_IOS_Release/: awsconfiguration_template.txt
Prebuilt_Images/: Firmware Flashing Steps GG11_LTE-M_SSK.docx
Prebuilt_Images/bootloader/: bootloader-storage-internal-single-2048k-combined.s37
Prebuilt_Images/mqtt_demo/: aws_demo-signed.s37  encryption-key  signing-key-tokens.txt
SSK_Cert_And_Config/code_sign_cert/: Readme  cert_config.txt  ecdsasigner.crt  ecdsasigner.key
STM32MP1_SSK_Pkg_Rel/: Readme.txt
STM32MP1_SSK_Pkg_Rel/SSK_AWS_Demo/: Demo.config  Gateway_Demo_avg.sh  Generate_Verification_Cert.sh  Version_Avenger.py
STM32MP1_SSK_Pkg_Rel/SSK_Cert_And_Config/AWS_Config/: config.json  openssl.cnf
STM32MP1_SSK_Pkg_Rel/SSK_Cert_And_Config/AWS_ROOTCA/: CA_ID.txt  rootCA.key
STM32MP1_SSK_Pkg_Rel/SSK_Suit_Configuration/: EUI_Flash.py  SSK_Suit_Configuration.sh  clear_tpm.sh  core_setup.sh  flash_PCR_avnegre96.sh  flash_security_setup_Avenger.sh  wifi_avg.sh
STM32MP1_SSK_Pkg_Rel/SSK_Suit_Configuration/Tpm_Measured_Boot/: Measured_boot.sh  rc-local.service  rc.local
STM32MP1_SSK_Pkg_Rel/Stm32mp1_Yocto_Build/: build_script_avg.sh
STM32MP1_SSK_Pkg_Rel/Stm32mp1_Yocto_Build/patches/: Build.txt
Source_Code/: Release_notes.html
Source_Code/_htmresc/: mini-st.css  mini-st_2020.css
Source_Code/demos/ble/: aws_ble_mutual_auth.c
Source_Code/demos/demo_runner/: iot_demo_freertos.c  iot_demo_runner.c
Source_Code/demos/include/: aws_ble_mutual_auth.h  aws_clientcredential.h  aws_ota_codesigner_certificate.h
Source_Code/demos/mqtt/: iot_demo_mqtt.c
Source_Code/demos/network_manager/: aws_iot_network_manager.c
Source_Code/demos/ota/: aws_iot_ota_update_demo.c
Source_Code/demos/tcp/: sample_xbee_socket.c
Source_Code/projects/st/p_nucleo_wb55/cmake/bootloader/2_Images_SBSFU/: CMakeLists.txt
Source_Code/projects/st/p_nucleo_wb55/cmake/bootloader/2_Images_SECoreBin/: CMakeLists.txt
Source_Code/tests/common/: aws_test_runner.c  iot_tests_network.c
Source_Code/tests/include/: aws_clientcredential.h  aws_clientcredential_keys.h  aws_clientcredential_keys.h_bk_old  aws_test_tcp.h  (+1 more)
Source_Code/vendors/st/boards/p_nucleo_wb55/: CMakeLists.txt  STM32WB55xx_FLASH_CM4.ld  create_ota_job.sh  create_ota_job_win.bat  erase_flash.sh  flash_image.sh  image_build.sh  image_build_win.bat  start_ota_update.py
Source_Code/vendors/st/boards/p_nucleo_wb55/aws_demos/application_code/: main.c  main.h
Source_Code/vendors/st/boards/p_nucleo_wb55/aws_demos/application_code/st_code/: app_entry.c  app_entry.h  ble_conf.h  bsp_com.h  mutualauth_crypto.c  mutualauth_crypto.h  stm32wbxx_hal_msp.c  system_stm32wbxx.c
Source_Code/vendors/st/boards/p_nucleo_wb55/aws_demos/config_files/: FreeRTOSConfig.h  app_conf.h  aws_demo_config.h  hw_conf.h  iot_ble_config.h  iot_config.h  utilities_conf.h
Source_Code/vendors/st/boards/p_nucleo_wb55/aws_tests/application_code/: main.c  main.h
Source_Code/vendors/st/boards/p_nucleo_wb55/aws_tests/application_code/st_code/: app_entry.c  bsp_com.c  mutualauth_crypto.h  stm32wbxx_hal_msp.c  stm32wbxx_it.c  system_stm32wbxx.c
Source_Code/vendors/st/boards/p_nucleo_wb55/aws_tests/config_files/: FreeRTOSConfig.h  aws_ota_agent_config.h  aws_test_runner_config.h  hw_conf.h  iot_config.h  iot_mqtt_agent_config.h  utilities_conf.h
Source_Code/vendors/st/boards/p_nucleo_wb55/bootloader/: readme.txt
Source_Code/vendors/st/boards/p_nucleo_wb55/bootloader/2_Images_SBSFU/: Loader_Bin.c  SE_CORE_Bin.c  readme.txt  startup_stm32wb55xx_cm4.s  stm32wb55xx_flash_cm4.ld
Source_Code/vendors/st/boards/p_nucleo_wb55/bootloader/2_Images_SBSFU/Core/Inc/: app_hw.h  main.h  stm32wbxx_hal_conf.h  stm32wbxx_it.h
Source_Code/vendors/st/boards/p_nucleo_wb55/bootloader/2_Images_SBSFU/Core/Src/: main.c  stm32wbxx_hal_msp.c  stm32wbxx_it.c
Source_Code/vendors/st/boards/p_nucleo_wb55/bootloader/2_Images_SBSFU/SBSFU/App/: app_sfu.h  sfu_boot.c  sfu_boot.h  sfu_com_loader.c  sfu_com_loader.h  sfu_com_trace.c  sfu_com_trace.h  sfu_def.h  sfu_error.c  sfu_error.h  sfu_fsm_states.h  sfu_fwimg_core.c  sfu_fwimg_internal.h  sfu_fwimg_regions.h  sfu_fwimg_services.h  sfu_loader.c  sfu_loader.h  sfu_new_image.c  sfu_new_image.h  sfu_test.c  sfu_test.h  sfu_trace.h
Source_Code/vendors/st/boards/p_nucleo_wb55/bootloader/2_Images_SECoreBin/: SECBOOT_AES128_GCM_AES128_GCM_AES128_GCM.sh  SECBOOT_ECCDSA_WITHOUT_ENCRYPT_SHA256.sh  SECBOOT_ECCDSA_WITH_AES128_CBC_SHA256.sh  output.txt  postbuild.sh  prebuild.sh  readme.txt  se_key.s  startup_stm32wb55xx_cm4.s  stm32wb55xx_flash_cm4.ld
Source_Code/vendors/st/boards/p_nucleo_wb55/bootloader/2_Images_SECoreBin/Inc/: app_conf.h  se_cks.h  se_crypto_bootloader.h  se_crypto_config.h  se_def_metadata.h  se_low_level.h  stm32wbxx_hal_conf.h  stm32wbxx_it.h  utilities_conf.h
Source_Code/vendors/st/boards/p_nucleo_wb55/bootloader/2_Images_SECoreBin/Src/: hw_ipcc.c  se_cks.c  se_crypto_bootloader.c  se_low_level.c  stm32wbxx_hal_msp.c  stm32wbxx_it.c
Source_Code/vendors/st/boards/p_nucleo_wb55/bootloader/Linker_Common/: mapping_export.h  mapping_fwimg.ld  mapping_sbsfu.ld
Source_Code/vendors/st/boards/p_nucleo_wb55/ports/ble/: iot_ble_hal_common.h  iot_ble_hal_common_gap.c  iot_ble_hal_gap.c  iot_ble_hal_gatt_server.c  iot_ble_hal_internals.h
Source_Code/vendors/st/boards/p_nucleo_wb55/ports/ota/: AFR_image_desc.c  AFR_image_desc.h  aws_ota_pal.c  aws_ota_pal_settings.h  flash_buffer.c  flash_buffer.h  flash_operations.c  flash_operations.h  sfu_app_new_image.c  sfu_app_new_image.h
iMX_8X_SSK_Pkg_Rel/: Readme.txt
iMX_8X_SSK_Pkg_Rel/Imx8x_Yocto_Build/: Readme  build_script_aiml.sh
iMX_8X_SSK_Pkg_Rel/SSK_AWS_Demo/: Demo.config  Gateway_Demo_aiml.sh  Generate_Verification_Cert.sh  Version_Aiml.py  lightController.py  trafficLight.py
iMX_8X_SSK_Pkg_Rel/SSK_Suit_Configuration/: EUI_Flash.py  SSK_Suit_Configuration.sh  core_setup.sh  flash_PCR_AIML.sh  flash_security_setup_AIML.sh  test_result.sh  wifi_aiml.sh
(+261 files in other folders)
